fix: referencia das imagens e scripts

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <img class="logo" src="/assets/images/logo.png" alt="Logo da Alura">
+        <img class="logo" src="./assets/images/logo.png" alt="Logo da Alura">
     </header>
 
     <main>
@@ -36,7 +36,7 @@
 
         <section>
             <div class="sem-texto">
-                <img src="/assets/images/boneco.png" alt="Sem mensagem encontrada">
+                <img src="./assets/images/boneco.png" alt="Sem mensagem encontrada">
                 <h3 class="titulo-sem-texto">Nenhuma mensagem encontrada</h3>
                 <p>Digite um texto que você deseja criptografar ou descriptografar</p>
             </div>
@@ -47,7 +47,7 @@
         </section>
     </main>
 
-    <script src="script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
